<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basil</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_budget_manager">BudgetManager</string>
    <string name="title_activity_budget_overview">BudgetOverviewActivity</string>
    <string name="title_activity_new_transaction">NewTransactionActivity</string>
    <string name="title_activity_category_view">CategoryViewActivity</string>
    <string name="str_btn_addTransaction">Add Transaction</string>
    <string name="str_btn_overview">Graphical</string>
    <string name="str_btn_newCategory">New Category</string>
    <string name="title_activity_new_category">NewCategory</string>
    <string name="str_btn_categorySubmit">Submit</string>

    <!--<string name="str_monthlyExpense">Monthly Expense</string>-->
    <string name="str_Overview">Expense Overview</string>
    <string name="str_progress">50</string>
    <string name="str_week1">1</string>
    <string name="str_week2">2</string>
    <string name="str_week3">3</string>
    <string name="str_week4">4</string>
    <string name="txt_week1Content"> -------week one transactions------- \ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl\ndkfjlaskdjfl jdsfl jaldskfjlksajdfl kjsldfkj lfl</string>
    <string name="txt_week2Content"> -------week two transactions------- \nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week\nYou bought a bunch of stuff this week</string>
    <string name="txt_week3Content"> -------week three transactions------- \nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!\nYou bought less, good job!</string>
    <string name="txt_week4Content"> -------week four transactions------- \nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy\nIt\'s the end of the month go crazy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_act__category_view">Act_CategoryView</string>
    <string name="title_activity_act__transaction_confirm">Act_TransactionConfirm</string>
    <string name="title_activity_act__overview_settings">Act_OverviewSettings</string>
</resources>
