<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lawrencium.basil.Act_CategoryView">

    <TextView
        android:text="@string/str_monthlyExpense"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthlyExpense"/>

    <Button
        android:text="@string/str_week1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/week1"
        android:layout_below="@+id/monthlyExpense"
        android:onClick="toggle_contents" />

    <!--content to hide/show -->
    <TextView
        android:text="@string/txt_week1Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_week1"/>

    <Button
        android:text="@string/str_week2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/week2"
        android:layout_below="@+id/week1"/>

    <Button
        android:text="@string/str_week3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/week3"
        android:layout_below="@+id/week2"/>

    <Button
        android:text="@string/str_week4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/week4"
        android:layout_below="@+id/week3"/>

</RelativeLayout>
